# fmc3_xsens_mvn_ros

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
gr2_xsens_bridge/: __init__.py  __main__.py  bridge.py  config.py  mapping.py  safety.py  tpose_calibration.json  使用说明.md
xsens_mvn_ros/: CMakeLists.txt  package.xml
xsens_mvn_ros/include/xsens_mvn_ros/: XSensClient.h
xsens_mvn_ros/launch/: xsens_client.launch.py
xsens_mvn_ros/rviz/: xsens_visualization.rviz
xsens_mvn_ros/src/: xsens_client_node.cpp
xsens_mvn_ros/src/xsens_client/: XSensClient.cpp
xsens_mvn_ros_python/: README.md  __init__.py  client.py  data_types.py  demo.py  model.py  protocol.py
xsens_mvn_ros_python/tests/: __init__.py  test_protocol.py
