<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>xsens_mvn_ros</name>
    <version>0.0.1</version>

    <description>The xsens_mvn_ros package</description>

    <maintainer email="mattia.leonori@iit.it">Mattia Leonori</maintainer>
    <maintainer email="marta.lorenzini@iit.it">Marta Lorenzini</maintainer>

    <license>BSD</license>

    <url>https://github.com/hrii-iit/xsens_mvn_ros</url>
    <author email="mattia.leonori@iit.it">Mattia Leonori</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>urdf</depend>
    <depend>xsens_mvn_ros_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
